Arreglo de diseño Boton Ir a un lugar: Lobby

--- a/angularHEFE/src/app/components/vr/lobby/assets/assets.component.html
+++ b/angularHEFE/src/app/components/vr/lobby/assets/assets.component.html
@@ -31,3 +31,4 @@
 <img id="imgArrowgo" src="../../../assets/images/vr/arrowUp.svg" alt="Arrowgo">
 <img id="arrowLeft" src="../../../assets/images/vr/left-arrow.svg" alt="arrowLeft">
 <img id="arrowRight" src="../../../assets/images/vr/right-arrow.svg" alt="arrowRight">
+<a-asset id="goPlace" src="../../../../../assets/images/vr/goPlace.svg"></a-asset>
