Routing Al Museo y arreglo del modelo 3D del museo

--- a/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
+++ b/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
@@ -6,7 +6,8 @@
     <a-entity camera="" position="0 0.6 0" wasd-controls rotation="-9.969465635276295 1023.3026221036458 0"
       look-controls cursor="rayOrigin: mouse"></a-entity>
 
-    <a-entity id="modelMuseo" gltf-model="#museo" position="53.5 0 -7.5" rotation="0 -90 0"></a-entity>
+    <a-gltf-model id="modelMuseo" src="#museo" rotation="0 -90 0" position="53.5 0 -7.5">
+    </a-gltf-model>
     <a-sky id="skyMuseo" color="#0a0d1f"></a-sky>
 
     <a-entity id="ligthAmbient" light="type: ambient; color: #1c5aab"></a-entity>
