--- a/angularHEFE/src/app/components/vr/lobby/scene/scene.component.html
+++ b/angularHEFE/src/app/components/vr/lobby/scene/scene.component.html
@@ -153,7 +153,7 @@
             </a-text>
           </a-entity>
           <a-image geometry="height: 0.5; width: 0.5;" id="containerbtngo" material="" position="-0.50 -0.7 0.1"
-            scale="1 1 1" src="#goPlace"
+            scale="1 1 1" src="#goPlace" (click)="goMuseum()"
             animation__scaledown="property: scale; from: 1.1 1.1 1.1; to: 1 1 1; dur: 100; autoplay: false; easing:
             easeInOutCubic; startEvents: mouseleave; pauseEvents: mouseenter; resumeEvents: "
             animation__scaleup="property: scale; from: 1 1 1; to: 1.1 1.1 1.1; dur: 100; autoplay: false; easing:
