--- a/angularHEFE/src/app/components/vr/museum/assets-museum/assets-museum.component.html
+++ b/angularHEFE/src/app/components/vr/museum/assets-museum/assets-museum.component.html
@@ -3,3 +3,4 @@
 <a-asset id="startTravel" src="../../../../../assets/images/museum/enviar.svg"></a-asset>
 <a-asset id="exit" src="../../../../../assets/images/museum/exit.svg"></a-asset>
 <a-asset id="ballon" src="../../../../../assets/images/museum/ballonMessaje.svg"></a-asset>
+<a-asset id="robotSad" src="../../../../../assets/images/museum/robotSad.png"></a-asset>
