--- a/angularHEFE/src/app/components/details-room/details-room.component.css
+++ b/angularHEFE/src/app/components/details-room/details-room.component.css
@@ -9,10 +9,9 @@
 .home-user .contentDetails {
   min-height: 100vh;
   background: #18191a;
-  position: inherit;
   padding-top: 50px;
+  width: 100%;
 }
-
 
 
 .buttonDelete:hover {
