--- a/angularHEFE/src/styles.css
+++ b/angularHEFE/src/styles.css
@@ -1123,6 +1123,7 @@ mat-grid-list {
       margin-top: -100px !important;
     }
 
+    .wapper-nav nav {}
   }
 
   @media only screen and (min-width:521px) and (max-width:600px) {
