Animation de Menu Museo

--- a/angularHEFE/src/app/components/vr/museum/assets-museum/assets-museum.component.html
+++ b/angularHEFE/src/app/components/vr/museum/assets-museum/assets-museum.component.html
@@ -4,3 +4,9 @@
 <a-asset id="exit" src="../../../../../assets/images/museum/exit.svg"></a-asset>
 <a-asset id="ballon" src="../../../../../assets/images/museum/ballonMessaje.svg"></a-asset>
 <a-asset id="robotSad" src="../../../../../assets/images/museum/robotSad.png"></a-asset>
+
+<a-asset id="guided" src="../../../../../assets/images/museum/guided.svg"></a-asset>
+<a-asset id="travelComplete" src="../../../../../assets/images/museum/travelFree.svg"></a-asset>
+<a-asset id="exhibitionMuseum" src="../../../../../assets/images/museum/exhibition.svg"></a-asset>
+<a-asset id="computer" src="../../../../../assets/images/museum/laptop.svg"></a-asset>
+<a-asset id="internetSV" src="../../../../../assets/images/museum/internetSV.svg"></a-asset>
