--- a/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
+++ b/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
@@ -21,52 +21,98 @@
     <a-entity id="focoMenu" position="-2 -1.259 -2.799"
       light="color: #22f789; intensity: 21.23; type: point; distance: 2.33; decay: 2" visible=""
       animation__position="property: position; to: -2.61 -1.24 -5; dur: 1000; autoplay: false; easing:
-      easeInOutCubic; startEvents: startYep;"></a-entity>
+      easeInOutCubic; startEvents: hola;"></a-entity>
 
-    <a-entity id="lblBanner"
-      text="font: https://cdn.aframe.io/fonts/Monoid.fnt; value: BIENVENIDO AL MUSEO DE HISTORIA; align: center; width: 7"
-      position="0.69354 1.5 -5" rotation=""
-      animation__rotation="property: rotation; to: 0 90 0; dur: 1000; autoplay: false; easing:
-      easeInOutCubic; startEvents: startYep;"
-      animation__position="property: position; to: -3.60 1.5 -5; dur: 1000; autoplay: false; easing:
-      easeInOutCubic; startEvents: startYep;"></a-entity>
+    <a-entity id="contentRobot" position="0.209 0 -2.799">
+      <a-entity id="lblBanner"
+        text="font: https://cdn.aframe.io/fonts/Monoid.fnt; value: BIENVENIDO AL MUSEO DE HIPEREFE; align: center; width: 6"
+        position="0 1.5 0" rotation="" 
+        animation__hidden="property: position; to: 1.3 -3 2; startEvents: visitGuided;
+        dur: 1000; easing: easeInOutCubic; autoplay: false;"></a-entity>
 
-    <a-entity id="contentRobot">
-      <a-image src="#robot" width="3" height="1.5" position="2.10472 -0.67227 -2.79854" material="" geometry="">
-      </a-image>
-
-      <a-image src="#ballon" width="3" height="1.5" position="2.80701 0.76 -2.79854" material="side: front" geometry=""
-        scale="0.5 1 1">
-      </a-image>
-
-      <a-entity id="phrasesRobot"
-        text="font: https://cdn.aframe.io/fonts/Monoid.fnt; value: Yepa, que pasa gente; align: center; wrapCount: 9"
-        position="2.77632 0.79231 -2.79" rotation="" scale=""></a-entity>
+      <a-entity id="question"
+        text="font: https://cdn.aframe.io/fonts/Monoid.fnt; value: Como quieres realizar tu visita?; width: 4; align: center;"
+        position="0 1.2 0" rotation="" geometry="primitive:plane" material="opacity:0" 
+        animation__hidden="property: position; to: 0 1.5 0; startEvents: visitGuided;
+                dur: 1000; easing: easeInOutCubic; autoplay: false;"></a-entity>
+      <a-image id="imgRobot" src="#robot" width="3" height="1.5" position="0 -0.67227 0" material="" geometry="" 
+        animation__moveleft="property: position; to: -1 -0.67227 0; startEvents: visitGuided;
+        dur: 1000; easing: easeInOutCubic; autoplay: false;"></a-image>
     </a-entity>
 
-    <a-entity id="containerBtnStart" 
-      animation__rotation="property: rotation; to: 0 90 0; dur: 1000; autoplay: false; easing:
-      easeInOutCubic; startEvents: startYep;"
-      animation__position="property: position; to: -0.77 0 -5; dur: 1000; autoplay: false; easing:
-      easeInOutCubic; startEvents: startYep;">
-      <a-entity id="btnStartTravel" position="-0.79164 0.19721 -2.799" rotation="" (click)="startTravel()"
-        animation__scaledown="property: scale; from: 1.1 1.1 1.1; to: 1 1 1; dur: 100; autoplay: false; easing:
-      easeInOutCubic; startEvents: mouseleave; pauseEvents: mouseenter; resumeEvents: " 
-      animation__scaleup="property: scale; from: 1 1 1; to: 1.1 1.1 1.1; dur: 100; autoplay: false; easing:
-      easeInOutElastic; startEvents: mouseenter; pauseEvents: mouseleave; resumeEvents: "
-        proxy-event="event: click; to: a-scene, #lblBanner, #containerBtnStart, #focoMenu; as: startYep; captureBubbles:
-        true; bubbles: true">
-        <a-image src="#startTravel" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
+    <a-entity id="containerBtnStart">
+
+      <a-entity id="btnStartTravelGuided" position="1.3 0.19721 -2.799" rotation="" (click)="visitGuided()"
+          animation__hidden="property: position; to: 1.3 -3 2; startEvents: visitGuided;
+            dur: 1000; easing: easeInOutCubic; autoplay: false;"
+            animation__scaledown="property: scale; from: 1.1 1.1 1.1; to: 1 1 1; dur: 100; autoplay: false; easing:
+            easeInOutCubic; startEvents: mouseleave; pauseEvents: mouseenter; resumeEvents: "
+            animation__scaleup="property: scale; from: 1 1 1; to: 1.1 1.1 1.1; dur: 100; autoplay: false; easing:
+            easeInOutElastic; startEvents: mouseenter; pauseEvents: mouseleave; resumeEvents: "
+            proxy-event="event: click; to: a-scene, #lblBanner,#btnStartTravelGuided, #containerBtnStart, #focoMenu,
+            #btnStartTravelFree, #btnExitMuseum, #btnTravelComplete, #exhibition, #historyComputer, #historyInternetSV,
+            #contentRobot, #question, #imgRobot;
+            as: visitGuided; captureBubbles: true; bubbles: true;">
+        <a-image src="#guided" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
         </a-image>
-        <a-entity text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Iniciar Paseo; align: center; width: 4"
+        <a-entity text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Visita Guiada; align: center; width: 4"
           position="0 0.05223 0"></a-entity>
       </a-entity>
-      <a-entity id="btnExitMuseum" position="-0.85285 -0.75937 -2.799" rotation="" (click)="goToLobby()"
-        animation__scaledown="property: scale; from: 1.1 1.1 1.1; to: 1 1 1; dur: 100; autoplay: false; easing:
-    easeInOutCubic; startEvents: mouseleave; pauseEvents: mouseenter; resumeEvents: " animation__scaleup="property: scale; from: 1 1 1; to: 1.1 1.1 1.1; dur: 100; autoplay: false; easing:
-    easeInOutElastic; startEvents: mouseenter; pauseEvents: mouseleave; resumeEvents: ">
+
+      <a-entity id="btnStartTravelFree" position="-1 0.19721 -2.799" rotation="" 
+      animation__hidden="property: position; to: -2.568 -0.661 -2.799; startEvents: visitGuided;
+            dur: 1000; easing: easeInOutCubic; autoplay: false;">
+        <a-image src="#startTravel" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
+        </a-image>
+        <a-entity
+          text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Explorar por mi cuenta; align: center; width: 4"
+          position="0 0.05223 0"></a-entity>
+      </a-entity>
+      
+      <a-entity id="btnExitMuseum" position="-2.5 0.19721 -2.799" rotation="">
         <a-image src="#exit" position="0 0.313 0" material="side: front" geometry="" scale="0.5 0.5 1"></a-image>
         <a-entity text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Lobby; align: center; width: 4"
+          position="0 0.05223 0"></a-entity>
+      </a-entity>
+
+      <a-entity id="btnTravelComplete" position="-2.568 -3 2" rotation="" 
+      animation__hidden="property: position; to: -1 0.756 -2.799; startEvents: visitGuided;
+            dur: 1000; easing: easeInOutCubic; autoplay: false;">
+        <a-image src="#travelComplete" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
+        </a-image>
+        <a-entity
+          text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Recorrido Completo; align: center; width: 4"
+          position="0 0.05223 0"></a-entity>
+      </a-entity>
+
+      <a-entity id="exhibition" position="1.2 -3 2" rotation=""
+        animation__hidden="property: position; to:0.95 0.756 -2.79 ; startEvents: visitGuided; easing: easeInOutCubic;
+        autoplay: false">
+        <a-image src="#exhibitionMuseum" position="-0.65 0.31336 0" material="side: front" geometry=""
+          scale="0.5 0.5 1">
+        </a-image>
+        <a-entity
+          text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Exhibiciones del Museo; align: center; width: 4"
+          position="0.59 0.4 0"></a-entity>
+      </a-entity>
+
+      <a-entity id="historyComputer" position="1.2 -3 2" rotation="" 
+      animation__hidden="property: position; to:1.3 0.3 -2.799; startEvents: visitGuided;
+            dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 500">
+        <a-image src="#computer" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
+        </a-image>
+        <a-entity
+          text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Generaciones de la Computadora; align: center; width: 4"
+          position="0 0.05223 0"></a-entity>
+      </a-entity>
+
+      <a-entity id="historyInternetSV" position="1.3 -4 2" rotation="" 
+      animation__hidden="property: position; to: 1.3 -0.5 -2.799; startEvents: visitGuided;
+            dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 500">
+        <a-image src="#internetSV" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
+        </a-image>
+        <a-entity
+          text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Internet en El Salvador; align: center; width: 4"
           position="0 0.05223 0"></a-entity>
       </a-entity>
     </a-entity>
@@ -114,4 +160,13 @@
                 tu primer paseo; align: center; wrapCount: 35; width: 5;" position="2 0.850 -2.79" rotation="0 180 0"
         scale="1.2 1.2 1" rotation="0 180 0"></a-entity>
     </a-entity>
+
+    <a-entity id="lightSphere" light="type: spot; decay: 3; distance: 20; intensity: 1.33; penumbra: 0.1"
+      position="-0.01961 1.23176 -6.99177" visible="false">
+      <a-entity id="forma" geometry="primitive: cone; height: 0.360; radiusBottom: 0.52; radiusTop: 0.12"
+        material="shader: flat; opacity: 0.5" position="-0.040 0.30 -0.57" rotation="29.999999999999996 0 0">
+      </a-entity>
+    </a-entity>
+    <a-entity id="pilar" geometry="primitive: cylinder; height: 1.63; segmentsHeight: 17; radius: 0.46"
+      material="shader: flat; color: #0c5a34" position="-0.088 -0.91 -9.659"></a-entity>
 </a-scene>
