--- a/angularHEFE/src/app/components/vr/museum/assets-museum/assets-museum.component.html
+++ b/angularHEFE/src/app/components/vr/museum/assets-museum/assets-museum.component.html
@@ -1,4 +1,5 @@
 <a-asset-item id="museo" src="../../../../../assets/images/museum/modelMuseum.glb"></a-asset-item>
+<a-asset-item id="tv" src="../../../../../assets/images/museum/tv.glb"></a-asset-item>
 <a-asset id="robot" src="../../../../../assets/images/museum/robot.png"></a-asset>
 <a-asset id="startTravel" src="../../../../../assets/images/museum/enviar.svg"></a-asset>
 <a-asset id="exit" src="../../../../../assets/images/museum/exit.svg"></a-asset>
@@ -17,3 +18,17 @@
 <a-mixin id="scaleUp"
   animation__scaleup="property: scale; from: 1 1 1; to: 1.1 1.1 1.1; dur: 100; autoplay: false; easing:
         easeInOutElastic; startEvents: mouseenter; pauseEvents: mouseleave; resumeEvents: "></a-mixin>
+<a-mixin id="hiddenMenu" animation__hiddenmenu="property: position; to: 1.3 -3 2; startEvents: start;
+            dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 500"></a-mixin>
+<a-mixin id="menuInvisible" animation__menuvisible="property: visible; to: false; startEvents: animationcomplete__hiddenmenu;
+            dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 500"></a-mixin>
+<a-mixin id="rotationObj" animation__rotate="property: rotation; to: 0 180 0;
+            dur: 3000; easing: easeInOutCubic; autoplay: true; loop: true;"></a-mixin>
+<a-mixin id="ligthIntesity"
+  animation__intesity="property: intensity; to: 1.33; startEvents: start;
+            dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 2000"></a-mixin>
+
+<a-mixin id="lightAmbientOn" animation__intesityon="property: intensity; to: 1.0; startEvents: start;
+            dur: 1000; easing: easeInOutCubic; autoplay: false;"></a-mixin>
+<a-mixin id="lightAmbientOff" animation__intesityoff="property: intensity; to: 0; startEvents: start;
+            dur: 1000; easing: easeInOutCubic; autoplay: false;"></a-mixin>
