--- a/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
+++ b/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
@@ -3,25 +3,24 @@
       <app-assets-museum></app-assets-museum>
     </a-assets>
 
-    <a-entity id="cameraUser" camera="" position="0 0.6 0" rotation="-9.969465635276295 1023.3026221036458 0"
+    <a-entity id="cameraUser" camera="" wasd-controls position="0 0.6 0" rotation="-9.969465635276295 1023.3026221036458 0"
       look-controls cursor="rayOrigin: mouse"></a-entity>
 
     <a-gltf-model id="modelMuseo" src="#museo" rotation="0 -90 0" position="53.5 0 -7.5">
     </a-gltf-model>
     <a-sky id="skyMuseo" color="#0a0d1f"></a-sky>
 
-    <a-entity id="ligthAmbient" light="type: ambient; color: #1c5aab" visible="false"></a-entity>
+    <a-light id="ligthAmbient" type="ambient" color="#1c5aab" intensity="0" visible="true" mixin="lightAmbientOn">
+    </a-light>
 
-    <a-entity id="ligthOff" light="type: ambient; color: #0a1524" ></a-entity>
+    <a-entity id="ligthOff" type="ambient" color="#0a1524" mixin="lightAmbientOff"></a-entity>
 
 
     <a-entity id="focoRobot" position="2.355 -1.259 -2.799"
       light="color: #22f789; intensity: 21.23; type: point; distance: 2.33; decay: 2" visible=""></a-entity>
 
     <a-entity id="focoMenu" position="-2 -1.259 -2.799"
-      light="color: #22f789; intensity: 21.23; type: point; distance: 2.33; decay: 2" visible=""
-      animation__position="property: position; to: -2.61 -1.24 -5; dur: 1000; autoplay: false; easing:
-      easeInOutCubic; startEvents: hola;"></a-entity>
+      light="color: #22f789; intensity: 21.23; type: point; distance: 2.33; decay: 2" visible=""></a-entity>
 
     <a-entity id="contentRobot" position="0.209 0 -2.799">
       <a-entity id="lblBanner"
@@ -35,12 +34,14 @@
         position="0 1.2 0" rotation="" geometry="primitive:plane" material="opacity:0" 
         animation__hidden="property: position; to: 0 1.5 0; startEvents: visitGuided;
                 dur: 1000; easing: easeInOutCubic; autoplay: false;"></a-entity>
-      <a-image id="imgRobot" src="#robot" width="3" height="1.5" position="0 -0.67227 0" material="" geometry="" 
-        animation__moveleft="property: position; to: -1 -0.67227 0; startEvents: visitGuided;
-        dur: 1000; easing: easeInOutCubic; autoplay: false;"></a-image>
     </a-entity>
+    <a-image id="imgRobot" src="#robot" width="3" height="1.5" position="0 -0.67227 -2.799" material="" geometry=""
+      animation__moveleft="property: position; to: -1 -0.67227 -2.799; startEvents: visitGuided;
+        dur: 1000; easing: easeInOutCubic; autoplay: false;" 
+        animation__show1="property: position; to: 1.5 -0.91 -9.5; startEvents: start;
+        dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 2500;"></a-image>
 
-    <a-entity id="containerBtnStart">
+    <a-entity id="containerBtnStart" mixin="hiddenMenu menuInvisible">
 
       <a-entity id="btnStartTravelGuided" position="1.3 0.19721 -2.799" rotation="" (click)="visitGuided()" mixin="scaleUp scaleDown"
           animation__hidden="property: position; to: 1.3 -3 2; startEvents: visitGuided;
@@ -76,7 +77,9 @@
       animation__show="property: position; to: -1 0.756 -2.799; startEvents: visitGuided;
             dur: 1000; easing: easeInOutCubic; autoplay: false;"
       animation__hidden="property: position; to: -2.568 -3 2; startEvents: click;
-      dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 1000">
+      dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 1000"
+      proxy-event="event: click; to: a-scene, #containerBtnStart, #imgRobot, #lightSphere, #ligthAmbient, #ligthOff;
+      as: start; captureBubbles: true; bubbles: true;">
         <a-image src="#travelComplete" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
         </a-image>
         <a-entity
@@ -96,8 +99,8 @@
       </a-entity>
 
       <a-entity id="historyComputer" position="1.2 -3 2" rotation="" mixin="scaleUp scaleDown"
-      animation__hidden="property: position; to:1.3 0.3 -2.799; startEvents: visitGuided;
-            dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 500">
+      animation__show="property: position; to:1.3 0.3 -2.799; startEvents: visitGuided;
+            dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 1000">
         <a-image src="#computer" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
         </a-image>
         <a-entity
@@ -106,8 +109,8 @@
       </a-entity>
 
       <a-entity id="historyInternetSV" position="1.3 -4 2" rotation="" mixin="scaleUp scaleDown"
-      animation__hidden="property: position; to: 1.3 -0.5 -2.799; startEvents: visitGuided;
-            dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 500">
+      animation__show="property: position; to: 1.3 -0.8 -2.799; startEvents: visitGuided;
+            dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 1000">
         <a-image src="#internetSV" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
         </a-image>
         <a-entity
@@ -160,12 +163,36 @@
         scale="1.2 1.2 1" rotation="0 180 0"></a-entity>
     </a-entity>
 
-    <a-entity id="lightSphere" light="type: spot; decay: 3; distance: 20; intensity: 1.33; penumbra: 0.1"
-      position="-0.01961 1.23176 -6.99177" visible="false">
-      <a-entity id="forma" geometry="primitive: cone; height: 0.360; radiusBottom: 0.52; radiusTop: 0.12"
-        material="shader: flat; opacity: 0.5" position="-0.040 0.30 -0.57" rotation="29.999999999999996 0 0">
+    <a-entity id="abtractionComputer">
+      <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
+        position="-0.01961 1.23176 -6.99177" visible="true" mixin="ligthIntesity">
+        <a-entity id="forma" geometry="primitive: cone; height: 0.360; radiusBottom: 0.52; radiusTop: 0.12"
+          material="shader: flat; opacity: 0.5" position="-0.040 0.30 -0.57" rotation="29.999999999999996 0 0">
+        </a-entity>
+      </a-light>
+      <a-entity id="pilar" geometry="primitive: cylinder; height: 1.63; segmentsHeight: 17; radius: 0.46"
+        material="shader: flat; color: #fff" position="-0.088 -0.91 -9.659">
+        <a-entity id="computer" mixin="rotationObj" geometry="primitive: box;" material="shader: flat; color: #161616"
+          position="0 1.3 0" scale="0.5 0.5 0.5"></a-entity>
       </a-entity>
+      <a-gltf-model id="modelTv" position="-1.35 1 -10" rotation="0 180 0" src="#tv" scale="2 2 1"></a-gltf-model>
+      <a-gltf-model id="modelTv2" position="1.3 1 -10" rotation="0 180 0" src="#tv" scale="2 2 1"></a-gltf-model>
     </a-entity>
-    <a-entity id="pilar" geometry="primitive: cylinder; height: 1.63; segmentsHeight: 17; radius: 0.46"
-      material="shader: flat; color: #0c5a34" position="-0.088 -0.91 -9.659"></a-entity>
+
+    <a-entity id="abtractionInternetsv" position="8 0 0">
+      <a-entity id="lightSphere" light="type: spot; decay: 3; distance: 20; intensity: 1.33; penumbra: 0.1"
+        position="-0.01961 1.23176 -6.99177" visible="false">
+        <a-entity id="forma" geometry="primitive: cone; height: 0.360; radiusBottom: 0.52; radiusTop: 0.12"
+          material="shader: flat; opacity: 0.5" position="-0.040 0.30 -0.57" rotation="29.999999999999996 0 0">
+        </a-entity>
+      </a-entity>
+      <a-entity id="pilar" geometry="primitive: cylinder; height: 1.63; segmentsHeight: 17; radius: 0.46"
+        material="shader: flat; color: #fff" position="-0.088 -0.91 -9.659">
+        <a-entity id="computer" mixin="rotationObj" geometry="primitive: box;" material="shader: flat; color: #161616"
+          position="0 1.3 0" scale="0.5 0.5 0.5"></a-entity>
+      </a-entity>
+      <a-gltf-model id="modelTv" position="-1.35 1 -10" rotation="0 180 0" src="#tv" scale="2 2 1"></a-gltf-model>
+      <a-gltf-model id="modelTv2" position="1.3 1 -10" rotation="0 180 0" src="#tv" scale="2 2 1"></a-gltf-model>
+    </a-entity>
+    
 </a-scene>
