--- a/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
+++ b/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
@@ -39,11 +39,12 @@
       animation__moveleft="property: position; to: -1 -0.67227 -2.799; startEvents: visitGuided;
         dur: 1000; easing: easeInOutCubic; autoplay: false;" 
         animation__show1="property: position; to: 1.5 -0.91 -9.5; startEvents: start;
-        dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 2500;"></a-image>
+        dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 4500;"></a-image>
 
     <a-entity id="containerBtnStart" mixin="hiddenMenu menuInvisible">
 
-      <a-entity id="btnStartTravelGuided" position="1.3 0.19721 -2.799" rotation="" (click)="visitGuided()" mixin="scaleUp scaleDown"
+      <a-entity id="btnStartTravelGuided" position="1.3 0.19721 -2.799" rotation="" (mouseenter)="focusObject()"
+        (click)="visitGuided()" mixin="scaleUp scaleDown"
           animation__hidden="property: position; to: 1.3 -3 2; startEvents: visitGuided;
             dur: 1000; easing: easeInOutCubic; autoplay: false;"
             proxy-event="event: click; to: a-scene, #lblBanner,#btnStartTravelGuided, #containerBtnStart, #focoMenu,
@@ -57,6 +58,7 @@
       </a-entity>
 
       <a-entity id="btnStartTravelFree" position="-1 0.19721 -2.799" rotation="" mixin="scaleUp scaleDown"
+        (mouseenter)="focusObject()"
         animation__hidden="property: position; to: -2.568 -0.661 -2.799; startEvents: visitGuided;
             dur: 1000; easing: easeInOutCubic; autoplay: false;">
         <a-image src="#startTravel" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
@@ -66,18 +68,19 @@
           position="0 0.05223 0"></a-entity>
       </a-entity>
       
-      <a-entity id="btnExitMuseum" position="-2.5 0.19721 -2.799" rotation="" mixin="scaleUp scaleDown">
+      <a-entity id="btnExitMuseum" position="-2.5 0.19721 -2.799" rotation="" mixin="scaleUp scaleDown"
+        (mouseenter)="focusObject()">
         <a-image src="#exit" position="0 0.313 0" material="side: front" geometry="" scale="0.5 0.5 1"></a-image>
         <a-entity text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Lobby; align: center; width: 4"
           position="0 0.05223 0"></a-entity>
       </a-entity>
 
       <a-entity id="btnTravelComplete" position="-2.568 -3 2" rotation="" mixin="scaleUp scaleDown"
-        (click)="startTravelFree()" (animationcomplete__hidden)="moveCameraUser()"
+        (click)="startTravelFree()" (mouseenter)="focusObject()" (animationcomplete__hidden)="moveCameraUser()"
       animation__show="property: position; to: -1 0.756 -2.799; startEvents: visitGuided;
             dur: 1000; easing: easeInOutCubic; autoplay: false;"
       animation__hidden="property: position; to: -2.568 -3 2; startEvents: click;
-      dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 1000"
+      dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 2500"
       proxy-event="event: click; to: a-scene, #containerBtnStart, #imgRobot, #lightSphere, #ligthAmbient, #ligthOff;
       as: start; captureBubbles: true; bubbles: true;">
         <a-image src="#travelComplete" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
@@ -99,6 +102,7 @@
       </a-entity>
 
       <a-entity id="historyComputer" position="1.2 -3 2" rotation="" mixin="scaleUp scaleDown"
+        (mouseenter)="focusObject()"
       animation__show="property: position; to:1.3 0.3 -2.799; startEvents: visitGuided;
             dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 1000">
         <a-image src="#computer" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
@@ -109,6 +113,7 @@
       </a-entity>
 
       <a-entity id="historyInternetSV" position="1.3 -4 2" rotation="" mixin="scaleUp scaleDown"
+      (mouseenter)="focusObject()"
       animation__show="property: position; to: 1.3 -0.8 -2.799; startEvents: visitGuided;
             dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 1000">
         <a-image src="#internetSV" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
