terminando todas las vistas a lo responsive basico

--- a/angularHEFE/src/app/components/dialogs/room/room.component.html
+++ b/angularHEFE/src/app/components/dialogs/room/room.component.html
@@ -57,11 +57,11 @@
               <mat-label>URL de la imagen</mat-label>
               <input #url type="tel" matInput placeholder="https://image-example.com" formControlName="photo">
               <mat-icon matSuffix>insert_link</mat-icon>
-              <mat-hint align="left">Este campo No es obligatorio. Pero si la imagen no cambia, la URL es invalida.
+              <mat-hint id="span-img-new-room" align="left">Este campo No es obligatorio. Pero si la imagen no cambia, la URL es invalida.
               </mat-hint>
 
             </mat-form-field>
-            <div align="center" class="img"> 
+            <div align="center" id="new-room-img" class="img"> 
               <img src="{{url.value}}" onError="this.src='assets/images/vr.jpg'" alt="Imagen de la sala"/>
             </div>
 
@@ -84,8 +84,8 @@ TABLA
   </div>
 
 
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
+  <div class="mat-elevation-z8 table-topics">
+    <table mat-table [dataSource]="dataSource" matSort id="topic-table">
 
       <ng-container matColumnDef="select">
         <th id="thAgregar" mat-header-cell *matHeaderCellDef> agregar </th>
