--- a/angularHEFE/src/app/components/home/home.component.html
+++ b/angularHEFE/src/app/components/home/home.component.html
@@ -60,15 +60,15 @@
 
 
 <ng-template #Load>
-  <div align="center" style="margin-top: 20%;">
+  <div id="div-loading" align="center" style="margin-top: 20%;">
     <mat-spinner></mat-spinner>
-    <h3>Estamos preparando todo, por favor espera...</h3>
+    <h3 id="h3-loading">Estamos preparando todo, por favor espera...</h3>
   </div>
 </ng-template>
 
 <ng-template #Norooms>
   <div align="center" style="margin-top: 100px; color: white; font-weight: bold;">
-    <h3>No hay salas que mostrar</h3>
+    <h3 >No hay salas que mostrar</h3>
   </div>
 </ng-template>
 <!-- 
