--- a/angularHEFE/src/assets/css/styles.css
+++ b/angularHEFE/src/assets/css/styles.css
@@ -1597,6 +1597,14 @@ body::-webkit-scrollbar {
 }
 
 
+@media(max-width: 1050px) {
+
+
+  .cuenta img {
+    margin-left: 0px !important;
+  }
+
+}
 
 /*EMPEZANDO LO RESPONSIVE*/
 @media(max-width: 900px) {
@@ -1620,6 +1628,233 @@ body::-webkit-scrollbar {
     margin-left: 0px;
 
   }
+
+  .cuenta {
+    background: transparent !important;
+  }
+
 }
 
+.img-display-none {
+  display: none;
+}
 
+#stepper-ve {
+  display: none;
+}
+
+#span-config-cuenta2,
+#span-config-cuenta3 {
+
+  display: none;
+}
+
+@media(max-width: 860px) {
+  .hero-container{
+    display: grid;
+    place-items: center;
+  }
+}
+
+@media(max-width: 850px) {
+
+  .cuenta {
+    display: none;
+  }
+
+  .config-user-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+  }
+
+  .targett {
+    display: flex;
+    flex-direction: column;
+    border: 1.5px solid #020d4e;
+    margin: 5px;
+    align-items: center;
+    align-content: center;
+  }
+
+  .targett p {
+    margin: 5px;
+    text-align: center;
+  }
+
+  .targett h4 {
+    font-size: 18px;
+  }
+
+  .img-display-none {
+    display: block;
+    width: 200px !important;
+  }
+
+  #stepper-ve {
+    display: block;
+  }
+
+  #stepper-ho {
+    display: none;
+  }
+
+
+
+  #span-config-cuenta {
+    font-size: 15px;
+  }
+}
+
+.mat-dialog-container {
+  z-index: 5500 !important;
+}
+
+@media(max-width: 550px) {
+  #span-config-cuenta {
+    font-size: 13px;
+    max-width: 100%;
+    display: none;
+  }
+
+  #salir-mov{
+    display: block !important;
+  }
+  #span-config-cuenta2,
+  #span-config-cuenta3 {
+    max-width: 100%;
+    display: block;
+  }
+
+  #span-config-cuenta2 {
+    font-size: 15px;
+  }
+
+  .verification-box{
+    width: 400px;
+  }
+  #span-config-cuenta3 {
+    font-size: 13px;
+  }
+
+  #tollbar-user-config {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .img-display-none {
+    width: 150px !important;
+  }
+
+  .verification-box h1 {
+    font-size: 25px;
+  }
+
+  .verification-box p {
+    font-size: 13px;
+  }
+
+  #new-room-img img {
+    width: 135px;
+    border-radius: 0% !important;
+  }
+
+  #h3-loading {
+    font-size: 16px;
+    text-align: center;
+  }
+
+  .new-room table.mat-table {
+    max-width: 100% !important;
+  }
+
+  .button-row {
+    float: none;
+    margin-bottom: 20px;
+    align-items: center;
+    align-content: center;
+    display: flex;
+  }
+
+  .targett p {
+    letter-spacing: -0.4px;
+    line-height: 16px;
+  }
+
+  .div-loading {
+    margin-top: 35% !important;
+  }
+}
+
+@media(max-width: 450px) {
+  .mat-error {
+    font-size: 9px !important;
+  }
+
+  #new-room-img {
+    margin-top: 25px;
+  }
+
+  #span-img-new-room {
+    text-align: center;
+    font-size: 9px;
+  }
+
+  .table-topics{
+    max-width: 100%;
+    overflow-x: scroll;
+    padding: 5px;
+  }
+
+  #topic-table{
+    min-width: 160%;
+
+  }
+  
+  .verification-box button{
+    font-size: 13px;
+  }
+}
+
+@media(max-width: 400px) {
+  .img-display-none {
+    display: block;
+    width: 100px !important;
+  }
+
+  #btn-config-user {
+    margin: 10px !important;
+  }
+
+  .targett h4 {
+    font-size: 13px;
+
+  }
+
+  .targett p {
+    font-size: 11.5px;
+  }
+
+  .verification-box{
+    width: 350px;
+    height: 240px;
+  }
+
+  .verification-box{
+    width: 300px;
+  }
+}
+
+@media(max-width: 375px) {
+  .img-display-none {
+    display: block;
+    width: 75px !important;
+  }
+
+  th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type{
+    padding-left: 4px !important;
+  }
+
+
+}
