--- a/angularHEFE/src/app/components/vr/museum/assets-museum/assets-museum.component.html
+++ b/angularHEFE/src/app/components/vr/museum/assets-museum/assets-museum.component.html
@@ -1,10 +1,14 @@
-<a-asset-item id="museo" src="../../../../../assets/images/museum/modelMuseum.glb"></a-asset-item>
+<a-asset-item id="museo" src="../../../../../assets/images/museum/museum2.glb"></a-asset-item>
 <a-asset-item id="tv" src="../../../../../assets/images/museum/tv.glb"></a-asset-item>
 <a-asset id="robot" src="../../../../../assets/images/museum/robot.png"></a-asset>
 <a-asset id="startTravel" src="../../../../../assets/images/museum/enviar.svg"></a-asset>
 <a-asset id="exit" src="../../../../../assets/images/museum/exit.svg"></a-asset>
 <a-asset id="ballon" src="../../../../../assets/images/museum/ballonMessaje.svg"></a-asset>
 <a-asset id="robotSad" src="../../../../../assets/images/museum/robotSad.png"></a-asset>
+<a-asset id="texturaprueba" src="../../../../../assets/images/museum/textura2.png"></a-asset>
+<a-asset id="object" src="../../../../../assets/images/museum/objectsPrueba.glb"></a-asset>
+<a-asset id="laptop" src="../../../../../assets/images/museum/laptop.glb"></a-asset>
+<a-asset id="mouse" src="../../../../../assets/images/museum/mouse.glb"></a-asset>
 
 <a-asset id="guided" src="../../../../../assets/images/museum/guided.svg"></a-asset>
 <a-asset id="travelComplete" src="../../../../../assets/images/museum/travelFree.svg"></a-asset>
@@ -22,7 +26,7 @@
             dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 500"></a-mixin>
 <a-mixin id="menuInvisible" animation__menuvisible="property: visible; to: false; startEvents: animationcomplete__hiddenmenu;
             dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 500"></a-mixin>
-<a-mixin id="rotationObj" animation__rotate="property: rotation; to: 0 180 0;
+<a-mixin id="rotationObj" animation__rotate="property: rotation; to: 0 450 0;
             dur: 3000; easing: easeInOutCubic; autoplay: true; loop: true;"></a-mixin>
 <a-mixin id="ligthIntesity"
   animation__intesity="property: intensity; to: 1.33; startEvents: start;
