--- a/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
+++ b/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
@@ -6,14 +6,14 @@
     <a-entity id="cameraUser" camera="" wasd-controls position="0 0.6 0" rotation="-9.969465635276295 1023.3026221036458 0"
       look-controls cursor="rayOrigin: mouse"></a-entity>
 
-    <a-gltf-model id="modelMuseo" src="#museo" rotation="0 -90 0" position="53.5 0 -7.5">
+    <a-gltf-model id="modelMuseo" src="#museo" rotation="0 -90 0" position="53.5 0 -16">
     </a-gltf-model>
     <a-sky id="skyMuseo" color="#0a0d1f"></a-sky>
 
-    <a-light id="ligthAmbient" type="ambient" color="#1c5aab" intensity="0" visible="true" mixin="lightAmbientOn">
+    <a-light id="ligthAmbient" type="ambient" color="#3f6288" intensity="0" visible="true" mixin="lightAmbientOn">
     </a-light>
 
-    <a-entity id="ligthOff" type="ambient" color="#0a1524" mixin="lightAmbientOff"></a-entity>
+    <a-light id="ligthOff" type="ambient" color="#0a1524" mixin="lightAmbientOff"></a-light>
 
 
     <a-entity id="focoRobot" position="2.355 -1.259 -2.799"
@@ -31,14 +31,14 @@
 
       <a-entity id="question"
         text="font: https://cdn.aframe.io/fonts/Monoid.fnt; value: Como quieres realizar tu visita?; width: 4; align: center;"
-        position="0 1.2 0" rotation="" geometry="primitive:plane" material="opacity:0" 
+        position="0 1.2 0" rotation="" material="opacity:0" 
         animation__hidden="property: position; to: 0 1.5 0; startEvents: visitGuided;
                 dur: 1000; easing: easeInOutCubic; autoplay: false;"></a-entity>
     </a-entity>
     <a-image id="imgRobot" src="#robot" width="3" height="1.5" position="0 -0.67227 -2.799" material="" geometry=""
       animation__moveleft="property: position; to: -1 -0.67227 -2.799; startEvents: visitGuided;
         dur: 1000; easing: easeInOutCubic; autoplay: false;" 
-        animation__show1="property: position; to: 1.5 -0.91 -9.5; startEvents: start;
+        animation__show1="property: position; to: 1.5 -0.91 -17; startEvents: start;
         dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 4500;"></a-image>
 
     <a-entity id="containerBtnStart" mixin="hiddenMenu menuInvisible">
@@ -168,36 +168,34 @@
         scale="1.2 1.2 1" rotation="0 180 0"></a-entity>
     </a-entity>
 
-    <a-entity id="abtractionComputer">
+    <a-entity id="abtractionComputer" position="0 0 -12">
       <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
-        position="-0.01961 1.23176 -6.99177" visible="true" mixin="ligthIntesity">
-        <a-entity id="forma" geometry="primitive: cone; height: 0.360; radiusBottom: 0.52; radiusTop: 0.12"
-          material="shader: flat; opacity: 0.5" position="-0.040 0.30 -0.57" rotation="29.999999999999996 0 0">
-        </a-entity>
+        position="-0.01961 1.23176 0" visible="true" mixin="ligthIntesity">
+        <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
+          material="shader: flat; opacity: 0.5" position="-0.04 1.23868 -0.57" rotation="50 0 0"></a-entity>
       </a-light>
-      <a-entity id="pilar" geometry="primitive: cylinder; height: 1.63; segmentsHeight: 17; radius: 0.46"
-        material="shader: flat; color: #fff" position="-0.088 -0.91 -9.659">
-        <a-entity id="computer" mixin="rotationObj" geometry="primitive: box;" material="shader: flat; color: #161616"
-          position="0 1.3 0" scale="0.5 0.5 0.5"></a-entity>
+      <a-entity id="pilar" geometry="primitive: cylinder; height: 2.760; segmentsHeight: 17; radius: 0.46"
+        material="shader: flat; color: #fff" position="-0.088 -2.04 -5">
+        <a-gltf-model id="computer" mixin="rotationObj" src="#laptop"
+          position="0 2 0" scale="0.4 0.4 0.4" rotation="0 90 0"></a-gltf-model>
       </a-entity>
-      <a-gltf-model id="modelTv" position="-1.35 1 -10" rotation="0 180 0" src="#tv" scale="2 2 1"></a-gltf-model>
-      <a-gltf-model id="modelTv2" position="1.3 1 -10" rotation="0 180 0" src="#tv" scale="2 2 1"></a-gltf-model>
+      <a-gltf-model id="modelTv" position="-1.60 1.5 -6" rotation="0 180 0" src="#tv" scale="3 2.5 1"></a-gltf-model>
+      <a-gltf-model id="modelTv2" position="1.4 1.5 -6" rotation="0 180 0" src="#tv" scale="3 2.5 1"></a-gltf-model>
     </a-entity>
 
-    <a-entity id="abtractionInternetsv" position="8 0 0">
-      <a-entity id="lightSphere" light="type: spot; decay: 3; distance: 20; intensity: 1.33; penumbra: 0.1"
-        position="-0.01961 1.23176 -6.99177" visible="false">
-        <a-entity id="forma" geometry="primitive: cone; height: 0.360; radiusBottom: 0.52; radiusTop: 0.12"
-          material="shader: flat; opacity: 0.5" position="-0.040 0.30 -0.57" rotation="29.999999999999996 0 0">
-        </a-entity>
+    <a-entity id="abtractionInternetsv" position="8 0 -12">
+      <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
+        position="-0.01961 1.23176 0" visible="true" mixin="ligthIntesity">
+        <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
+          material="shader: flat; opacity: 0.5" position="-0.04 1.23868 -0.57" rotation="50 0 0"></a-entity>
+      </a-light>
+      <a-entity id="pilar" geometry="primitive: cylinder; height: 2.760; segmentsHeight: 17; radius: 0.46"
+        material="shader: flat; color: #fff" position="-0.088 -2.04 -5">
+        <a-gltf-model id="computer" mixin="rotationObj" src="#mouse" position="0 2 0" scale="0.1 0.1 0.1"
+          rotation="0 90 0"></a-gltf-model>
       </a-entity>
-      <a-entity id="pilar" geometry="primitive: cylinder; height: 1.63; segmentsHeight: 17; radius: 0.46"
-        material="shader: flat; color: #fff" position="-0.088 -0.91 -9.659">
-        <a-entity id="computer" mixin="rotationObj" geometry="primitive: box;" material="shader: flat; color: #161616"
-          position="0 1.3 0" scale="0.5 0.5 0.5"></a-entity>
-      </a-entity>
-      <a-gltf-model id="modelTv" position="-1.35 1 -10" rotation="0 180 0" src="#tv" scale="2 2 1"></a-gltf-model>
-      <a-gltf-model id="modelTv2" position="1.3 1 -10" rotation="0 180 0" src="#tv" scale="2 2 1"></a-gltf-model>
+      <a-gltf-model id="modelTv" position="-1.60 1.5 -6" rotation="0 180 0" src="#tv" scale="3 2.5 1"></a-gltf-model>
+      <a-gltf-model id="modelTv2" position="1.4 1.5 -6" rotation="0 180 0" src="#tv" scale="3 2.5 1"></a-gltf-model>
     </a-entity>
     
 </a-scene>
